[package]
name = "rusty-cache"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10"
env_logger = "0.11.3"
log = "0.4"
priority-queue = "2.0.2"
clap = { version = "4.5.4", features = ["derive"] }
